# botbitrix24

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: cnpj.py  health.py  webhook.py
app/clients/: bitrix.py  cnpja.py
app/config/: bitrix_fields.py  enums.py  settings.py
app/core/: exceptions.py  logging.py  security.py  utils.py
app/db/: base.py  models.py  session.py
app/schemas/: bitrix.py  cnpja.py  requests.py  responses.py
app/services/: address.py  enrichment.py  field_mapper.py  idempotency.py  phone.py  shareholder.py
docs/: fluxo-integracao.md  mapeamento-bitrix.md  referencias-externas.md
tests/integration/: conftest.py  test_enrich_deal.py  test_health_and_syncs.py  test_webhook_bitrix.py
tests/unit/: test_address.py  test_cnpja_client.py  test_field_mapper.py  test_phone.py  test_security.py  test_shareholder.py  test_utils.py
